# pubky-nexus

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: deploy-nexusd-shared.yml  test.yml
docker/: docker-compose.yml
docker/test-graph/: run-queries.sh
docker/test-graph/mocks/: calendars.cypher
examples/watcher/: main.rs
migrations/: README.md  event_dtstart_timestamp.cypher
nexus-common/: Cargo.toml  default.config.toml
nexus-common/src/: lib.rs  plugin.rs
nexus-common/src/db/graph/: setup.rs
nexus-common/src/db/graph/queries/: del.rs  get.rs  put.rs
nexus-common/src/db/kv/: traits.rs
nexus-common/src/db/kv/index/: lists.rs
nexus-common/src/models/: homeserver.rs  mod.rs
nexus-common/src/models/alarm/: details.rs  mod.rs
nexus-common/src/models/attendee/: details.rs  mod.rs
nexus-common/src/models/calendar/: details.rs  mod.rs  view.rs
nexus-common/src/models/event/: details.rs  mod.rs  view.rs
nexus-common/src/models/tag/: calendar.rs  event.rs  mod.rs
nexus-common/src/models/tag/traits/: collection.rs
nexus-watcher/: Cargo.toml
nexus-watcher/benches/: dispatcher.rs
nexus-watcher/src/: builder.rs  dispatcher.rs  lib.rs  testing.rs
nexus-watcher/src/events/: mod.rs
nexus-watcher/src/events/handlers/: attendee.rs  calendar.rs  event.rs  file.rs  mod.rs  tag.rs  universal_file.rs
nexus-watcher/src/service/: mod.rs  processor.rs  processor_runner.rs
nexus-watcher/tests/event_processor/: mod.rs
nexus-watcher/tests/event_processor/bookmarks/: raw.rs
nexus-watcher/tests/event_processor/files/: create.rs  delete.rs
nexus-watcher/tests/event_processor/homeserver/: utils.rs
nexus-watcher/tests/event_processor/plugins/: mod.rs  plugin_dispatch.rs
nexus-watcher/tests/event_processor/posts/: del_with_attachments.rs  raw.rs
nexus-watcher/tests/event_processor/tags/: external_post_tag.rs  post_put.rs  user_to_self_put.rs  user_to_user_del.rs  user_to_user_put.rs
nexus-watcher/tests/event_processor/users/: raw.rs
nexus-watcher/tests/event_processor/utils/: watcher.rs
nexus-watcher/tests/service/: event_processor_prioritization.rs
nexus-webapi/: Cargo.toml
nexus-webapi/src/: builder.rs  error.rs  key_republisher.rs  lib.rs  utils.rs
nexus-webapi/src/routes/: mod.rs
nexus-webapi/src/routes/v0/: endpoints.rs  mod.rs  types.rs
nexus-webapi/src/routes/v0/alarm/: mod.rs  view.rs
nexus-webapi/src/routes/v0/attendee/: mod.rs  view.rs
nexus-webapi/src/routes/v0/calendar/: mod.rs  view.rs
nexus-webapi/src/routes/v0/event/: mod.rs  view.rs
nexus-webapi/src/routes/v0/stream/: calendars.rs  events.rs  mod.rs  posts.rs
nexus-webapi/src/utils/: serde_helpers.rs
nexusd/: Cargo.toml
nexusd/src/: launcher.rs
