[package]
name = "nexus-watcher"
version = "0.4.1"
edition = "2021"
description = "Nexus Watcher constructs a social graph out of all of the events on pubky-core homeservers"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
anyhow = { workspace = true, optional = true }
async-trait = { workspace = true }
base32 = { version = "0.5", optional = true }
chrono = { workspace = true }
neo4rs = { workspace = true }
opentelemetry = { workspace = true }
pubky = { workspace = true }
pubky-app-specs = { workspace = true }
pubky-testnet = { workspace = true, optional = true }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }

[features]
# Exposes `nexus_watcher::testing` (WatcherTest, setup_with_plugins, etc.) for
# integration tests in downstream crates such as domain plugins.
testing = ["dep:pubky-testnet", "dep:anyhow", "dep:base32"]

[dev-dependencies]
anyhow = { workspace = true }
axum = { workspace = true }
base32 = "0.5"
httpc-test = "0.1.10"
# Enable the testing feature for nexus-watcher's own integration tests.
nexus-watcher = { path = ".", features = ["testing"] }
pubky-testnet = { workspace = true }
rand = "0.10.0"
tokio-shared-rt = { workspace = true }
