[package]
name = "nexusd"
version = "0.4.1"
edition = "2021"
description = "Nexus daemon"
homepage = "https://github.com/pubky/pubky-nexus"
repository = "https://github.com/pubky/pubky-nexus"
license = "MIT"

[dependencies]
async-trait = { workspace = true }
axum = { workspace = true }
utoipa = "5.4.0"
dirs = "6.0.0"
chrono = { workspace = true }
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true }
neo4rs = { workspace = true }
nexus-webapi = { version = "0.4.1", path = "../nexus-webapi" }
nexus-common = { version = "0.4.1", path = "../nexus-common" }
nexus-watcher = { version = "0.4.1", path = "../nexus-watcher" }
mapky-nexus-plugin = { path = "../../mapky/mapky-nexus-plugin" }
redis = { workspace = true, features = ["tokio-comp"] }
serde = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }

[dev-dependencies]
tokio-shared-rt = { workspace = true }
